--- a/generic.html
+++ b/generic.html
@@ -26,7 +26,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Latest Work</a></li>
-							<li class="active"><a href="generic.html">Abut Me</a></li>
+							<li class="active"><a href="generic.html">About Me</a></li>
 							<li><a href="elements.html">Work & Education</a></li>
 						</ul>
 						<ul class="icons">
