--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										<h2>Data Vizualization with Matplotlib</h2>
 									</header>
 									<a href="https://github.com/Geedorah54/Analysis/blob/main/NY%20Car%20Analysis.ipynb" target="_blank" class="image fit"><img src="images/ivana-cajina-WPVtT0MEM00-unsplash.jpg" alt="" /></a>
-									<p>In this project, I grabbed a public dataset on cars from the state of New York.  With the data, I vizalize what makes up the New York passenger vehicle market. </p>
+									<p>In this project, I grabbed a public dataset on cars from the state of New York.  With the data, I vizualize what makes up the New York passenger vehicle market. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Geedorah54/Analysis/blob/main/NY%20Car%20Analysis.ipynb" target="_blank" class="button">View Project</a></li>
 									</ul>
