--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 							<li><a href="elements.html">Work & Education</a></li>
 						</ul>
 						<ul class="icons">
+							<li><a href="https://twitter.com/BormannJordan" target="_blank" class="icon brands fa-upwork"><span class="label">UpWork</span></a></li>
 							<li><a href="https://twitter.com/BormannJordan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/jordan-bormann-642068185/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://www.instagram.com/jordan367/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
