--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
 							<li><a href="elements.html">Work & Education</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://twitter.com/BormannJordan" target="_blank" class="icon brands fa-upwork"><span class="label">UpWork</span></a></li>
-							<li><a href="https://twitter.com/BormannJordan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/jordan-bormann-642068185/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://www.instagram.com/jordan367/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/Geedorah54" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -54,18 +52,29 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">June 22, 2023</span>
-									<h2>Data Processing & Analysis</h2><br/>Descriptive Stock Analysis of America's top 5 oil companies</h2>
-									<p>In this project, I grabbed data using the yahoo finance api wrapper.  I then used existing data to create new fields, and used matplotlib to vizualize my analysis.</p>
+									<span class="date">Dec 10, 2023</span>
+									<h2>Machine Learning Development</h2><br/></h2>
+									<p>The goal of this project was to develop a machine learning model to predict prices of flights from a dataset.</p>
 								</header>
-								<a href="https://github.com/Geedorah54/Analysis/blob/main/Oil%20Market%20Analysis.ipynb" target="blank" class="image main"><img src="images/tasos-mansour-NRfNe4ys_bM-unsplash.jpg" alt="" /></a>
+								<a href="https://github.com/Geedorah54/Analysis/blob/main/Flight%20Time%20Series.ipynb" target="blank" class="image main"><img src="images/pascal-meier-UYiesSO4FiM-unsplash.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Geedorah54/Analysis/blob/main/Oil%20Market%20Analysis.ipynb" target="blank" class="button large">View Project</a></li>
+									<li><a href="https://github.com/Geedorah54/Analysis/blob/main/Flight%20Time%20Series.ipynb" target="blank" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">June 22, 2023</span>
+										<h2>Data Processing & Analysis</h2><br/>Descriptive Stock Analysis of America's top 5 oil companies</h2>
+									</header>
+									<a href="https://github.com/Geedorah54/Analysis/blob/main/Oil%20Market%20Analysis.ipynb" target="blank" class="image main"><img src="images/tasos-mansour-NRfNe4ys_bM-unsplash.jpg" alt="" /></a>
+									<p>In this project, I grabbed data using the yahoo finance api wrapper.  I then used existing data to create new fields, and used matplotlib to vizualize my analysis.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Geedorah54/Analysis/blob/main/Oil%20Market%20Analysis.ipynb" target="blank" class="button large">View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">June 20, 2023</span>
@@ -83,7 +92,7 @@
 										<h2>Data Vizualization with Matplotlib</h2>
 									</header>
 									<a href="https://github.com/Geedorah54/Analysis/blob/main/NY%20Car%20Analysis.ipynb" target="_blank" class="image fit"><img src="images/ivana-cajina-WPVtT0MEM00-unsplash.jpg" alt="" /></a>
-									<p>In this project, I grabbed a public dataset on cars from the state of New York.  With the data, I vizualize what makes up the New York passenger vehicle market. </p>
+									<p>In this project, I grabbed a public dataset on cars from the state of New York.  With the data, I vizalize what makes up the New York passenger vehicle market. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Geedorah54/Analysis/blob/main/NY%20Car%20Analysis.ipynb" target="_blank" class="button">View Project</a></li>
 									</ul>
@@ -110,7 +119,6 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://twitter.com/BormannJordan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.linkedin.com/in/jordan-bormann-642068185/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://www.instagram.com/jordan367/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/Geedorah54" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -121,6 +129,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
