--- a/generic.html
+++ b/generic.html
@@ -45,7 +45,7 @@
 									<h1>Who I am</h1>
 									<p>Throughout my life I always found myself asking the same question when trying to understand something.  Which is "How does this actually work?".  I've always had a knack for solving technical problems, and find joy in what I do.  Other than this I'm passionate about staying active and general fitness.  I'm a competitive powerlifter, avid golfer, and am always trying to challenge myself with setting new goals.  Don't hesitate to reach out to me, and let's see what we can accomplish!</p>
 								</header>
-								<div class="image main"></div>
+								<div class="image main"><img src="IMG_3687.JPG" alt="" /></div>
 							</section>
 
 					</div>
