--- a/elements.html
+++ b/elements.html
@@ -52,8 +52,9 @@
 									<ul>
 										<li>Programming with Python, Javascript</li>
 										<li>Front end development</li>
-										<li>Data Structures</li>
+										<li>Machine Learning Model Development</li>
 										<li>Data Analysis</li>
+										<li>API Utilization</li>
 										<li>Other competencies: SQL, Node, React, Pandas, HTML, CSS</li>
 									</ul>
 									<br/>
