--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
 								</article>
 								<article>
 									<header>
+										<span class="date">June 22, 2023</span>
+										<h2>Data Processing & Analysis</h2><br/>Descriptive Stock Analysis of America's top 5 oil companies</h2>
+									</header>
+									<a href="https://github.com/Geedorah54/Analysis/blob/main/Oil%20Market%20Analysis.ipynb" target="blank" class="image main"><img src="images/tasos-mansour-NRfNe4ys_bM-unsplash.jpg" alt="" /></a>
+									<p>In this project, I grabbed data using the yahoo finance api wrapper.  I then used existing data to create new fields, and used matplotlib to vizualize my analysis.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Geedorah54/Analysis/blob/main/Oil%20Market%20Analysis.ipynb" target="blank" class="button large">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">June 20, 2023</span>
 										<h2>Web Scraping with Python & BeautifulSoup<br /></h2>
 									</header>
