--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 								<article>
 									<header>
 										<span class="date">June 22, 2023</span>
-										<h2>Data Processing & Analysis</h2><br/>Descriptive Stock Analysis of America's top 5 oil companies</h2>
+										<h2>NLP utilization to test password strength</h2><br/>Building a model to test user inputs</h2>
 									</header>
-									<a href="https://github.com/Geedorah54/Analysis/blob/main/Oil%20Market%20Analysis.ipynb" target="blank" class="image main"><img src="images/tasos-mansour-NRfNe4ys_bM-unsplash.jpg" alt="" /></a>
-									<p>In this project, I grabbed data using the yahoo finance api wrapper.  I then used existing data to create new fields, and used matplotlib to vizualize my analysis.</p>
+									<a href="https://github.com/Geedorah54/Analysis/blob/main/Password_NLP.ipynb" target="blank" class="image main"><img src="markus-spiske-uPXs5Vx5bIg-unsplash.jpg" alt="" /></a>
+									<p>Feel free to check your passwords</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Geedorah54/Analysis/blob/main/Oil%20Market%20Analysis.ipynb" target="blank" class="button large">View Project</a></li>
+										<li><a href="https://github.com/Geedorah54/Analysis/blob/main/Password_NLP.ipynb" target="blank" class="button large">View Project</a></li>
 									</ul>
 								</article>
 								<article>
