--- a/index.html
+++ b/index.html
@@ -66,7 +66,17 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">June 22, 2023</span>
+										<span class="date">January 09, 2024</span>
+										<h2>Tableau Vizualization</h2><br/>Building custom dashboards to aid business decisions</h2>
+									</header>
+									<a href="https://public.tableau.com/app/profile/jordan.bormann/viz/ParksCityHotel/HotelBookingsDashboard?publish=yes" target="blank" class="image main"><img src="images/" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://public.tableau.com/app/profile/jordan.bormann/viz/ParksCityHotel/HotelBookingsDashboard?publish=yes" target="blank" class="button large">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">December 22, 2023</span>
 										<h2>NLP utilization to test password strength</h2><br/>Building a model to test user inputs</h2>
 									</header>
 									<a href="https://github.com/Geedorah54/Analysis/blob/main/Password_NLP.ipynb" target="blank" class="image main"><img src="images/markus-spiske-uPXs5Vx5bIg-unsplash.jpg" alt="" /></a>
