--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 										<span class="date">January 09, 2024</span>
 										<h2>Tableau Vizualization</h2><br/>Building custom dashboards to aid business decisions</h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/jordan.bormann/viz/ParksCityHotel/HotelBookingsDashboard?publish=yes" target="blank" class="image main"><img src="images/" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/jordan.bormann/viz/ParksCityHotel/HotelBookingsDashboard?publish=yes" target="blank" class="image main"><img src="images/peak.png" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/jordan.bormann/viz/ParksCityHotel/HotelBookingsDashboard?publish=yes" target="blank" class="button large">View Project</a></li>
 									</ul>
