--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									</header>
 									<a href="https://public.tableau.com/app/profile/jordan.bormann/viz/ParksCityHotel/HotelBookingsDashboard?publish=yes" target="blank" class="image main"><img src="images/peak.png" alt="" /></a>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/jordan.bormann/viz/ParksCityHotel/HotelBookingsDashboard?publish=yes" target="blank" class="button large">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/jordan.bormann/vizzes" target="blank" class="button large">View Project</a></li>
 									</ul>
 								</article>
 								<article>
